# nbody

./: .gitignore  CMakeLists.txt  run.sh
data/: metakernel.tm
res/: output.txt  output2.txt
src/: main.cpp
src/ephem/: ephem.cpp  ephem.h
src/linalg/: mat.cpp  mat.h  vector.cpp  vector.h
src/physics/: de.cpp  de.h  gravity.cpp  gravity.h
tests/: bayes.py  frametest.py  trajrender.py
viz/: orbit.blend  orbit.blend1
